# microscope

./: .gitignore  COPYING  Cam0_Server.py  Cam1_Server.py  CamServer  CamServer.py  INSTALL  INSTALL.rst  Lasers_Server.py  MANIFEST.in  NEWS  NEWS.rst  README  README.md  README.rst  camera.py  config.py  devicebase.py  deviceremotes.py  devices.py  laser.py  pyproject.toml  setup.py  winfix.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cameras/: SDK3.py  TEMPLATE.py  andorsdk3.py  testcamera.py
doc/: README  SERVERS  authors.rst  camera-template.py  conf.py  contributors.rst  design.rst  example.py  examples.rst  getting-started.rst  hacking.rst  history.rst  index.rst  install.rst  installing.rst  maintaining.rst  news.rst  supported-devices.rst
doc/architecture/: abc.rst  device-server.rst  gui.rst  index.rst  settings.rst  supported-devices.rst  triggers.rst
doc/examples/: index.rst  time-lapse-example-code.py
doc/get-involved/: dev-install.rst  hacking.rst  index.rst  maintaining.rst  new-device.rst
etc/: HACKING
example/: SERVERS  example.py
lasers/: cobolt.py  deepstar.py
microscope/: __init__.py  _utils.py  abc.py  clients.py  config.py  device_server.py  devices.py  deviceserver.py  filterwheel.py  gui.py  mirror.py  testfilterwheel.py  win32.py
microscope/_wrappers/: BMC.py  asdk.py  dcamapi4.py  mirao52e.py
microscope/cameras/: SDK3.py  SDK3Cam.py  TEMPLATE.py  _SDK3.py  _SDK3Cam.py  andorsdk3.py  atmcd.py  hamamatsu.py  picam.py  picamera.py  pvcam.h  pvcam.py  pvtest.py  testcamera.py  ximea.py
microscope/controllers/: asi.py  coolled.py  ludl.py  lumencor.py  prior.py  toptica.py  zaber.py
microscope/digitalio/: raspberrypi.py
microscope/filterwheels/: aurox.py  ell_slider.py  thorlabs.py
microscope/lasers/: cobolt.py  deepstar.py  obis.py  sapphire.py  testlaser.py  toptica.py
microscope/lights/: cobolt.py  deepstar.py  obis.py  sapphire.py  toptica.py
microscope/mirror/: alpao.py  bmc.py  mirao52e.py
microscope/sdk/: alpao.py  bmc.py
microscope/simulators/: __init__.py  stage_aware_camera.py
microscope/stages/: linkam.py  ludl.py  mls2032.py  priorProScanIII.py
microscope/testsuite/: devel.py  devices.py  deviceserver_test.py  hardware.py  libs.py  mock_devices.py  simulated_setup.py  test_client.py  test_device_server.py  test_devices.py  test_settings.py
microscope/valuelogger/: raspberrypi.py
microscope/wavefront_sensors/: AndorSDK3.py  AndorSDK3Camera.py  AndorZyla.py  ConsoleTests.py  SID4_SDK-cffiAPI.py  SID4_SDK.py  SID4_SDK_FileAnalysis_Example.cpp  SID4_SDK_GrabImage_Example.cpp  SID4_SDK_SaveMeasurement_Example.cpp  SID4_SDK_cffi.py  SID4_SDK_defs  camera.py  memoryHandler.py
microscope/wavefront_sensors/Examples/: SID4_SDK_ChangeMask_Example.cpp  SID4_SDK_ChangeMask_Example2.cpp  SID4_SDK_OpenSID4_Example.cpp
microscope/wrappers/: libBMC.py  libasdk.py
