[build-system]
requires = ['setuptools']


[tool.isort]
line_length = 80
# compatibility with black style (multi lineoutput 3 is vert-hanging)
multi_line_output = 3
# compatibility with black style
include_trailing_comma = true


[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38']


[tool.pylint.FORMAT]
max-line-length = 80


[tool.pytest.ini_options]
testpaths = "microscope/testsuite"
# python_classes must be an empty string otherwise it defaults to all
# Test* classes which then include the TestDevices imported in the
# test_* modules.  By using an empty value, it defaults to only
# picking classes that subclass from unittest.TestCase.  If we ever
# move away from the unittest framework, an alternative is to import
# the TestDevice classes under a different name.
python_classes = ""


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py
[testenv]
commands = python -m unittest discover \
  --start-directory microscope/testsuite \
  --verbose
"""
